# cfs_data_download

./: pyproject.toml
cfs_data_download/: CFS_climateForecastSystemData.py
cfs_data_download/boundary_data/: zmb_admbnda_adm0_ecz_20230629_em.dbf  zmb_admbnda_adm0_ecz_20230629_em.sbn  zmb_admbnda_adm0_ecz_20230629_em.sbx  zmb_admbnda_adm0_ecz_20230629_em.shp  zmb_admbnda_adm0_ecz_20230629_em.shp.xml  zmb_admbnda_adm0_ecz_20230629_em.shx
