[tool.poetry]
name = "cfs-data-download"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
geopandas = "^0.14.3"
xarray = "^2024.3.0"
netcdf4 = "^1.6.5"
pydap = "^3.4.1"
h5netcdf = "^1.3.0"
rioxarray = "^0.15.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
